--- a/spring-boot/config-service-example/product_catalog/src/main/resources/application.properties
+++ b/spring-boot/config-service-example/product_catalog/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb+srv://test-api-user:ZWU1rfMts2gETPbY@cluster0.nrsv6.gcp.mongodb.net/ecommerce
+spring.data.mongodb.uri=mongodb+srv://xxx-user:xxx-pwd@cluster0.nrsv6.gcp.mongodb.net/ecommerce
